[package]
name = "iron-json-response"
version = "0.3.0"
authors = ["Ning Sun <sunng@about.me>"]
license = "MIT/Apache-2.0"
description = "Json response middleware for Iron web framework"
keywords = ["json", "iron", "webdev", "web"]
repository = "https://github.com/sunng87/iron-json-response"

[features]
default = ["rustc_serialize_type"]
serde_type = ["serde", "serde_json"]
rustc_serialize_type = ["rustc-serialize"]

[dependencies]
iron = "^0.5.0"
mime = "^0.2.0"
rustc-serialize = { version = "^0.3.18", optional = true }
serde = { version = "^0.9.0", optional = true }
serde_json = { version = "^0.9.0", optional = true }

[dev-dependencies]
maplit = "^0.1.3"
params = "^0.6.0"

[package.metadata.release]
sign-commit = true
