[package]
name = "iron-json-response"
version = "0.3.1-pre"
authors = ["Ning Sun <sunng@about.me>"]
license = "MIT/Apache-2.0"
description = "Json response middleware for Iron web framework"
keywords = ["json", "iron", "webdev", "web"]
repository = "https://github.com/sunng87/iron-json-response"

[dependencies]
iron = "^0.5.0"
mime = "^0.2.0"
serde = "^0.9.0"
serde_json = "^0.9.0"

[dev-dependencies]
maplit = "^0.1.3"
params = "^0.6.0"

[package.metadata.release]
sign-commit = true
