[package]
name = "iron-json-response"
version = "0.5.2-pre"
authors = ["Ning Sun <sunng@about.me>"]
license = "MIT/Apache-2.0"
description = "Json response middleware for Iron web framework"
keywords = ["json", "iron", "webdev", "web"]
repository = "https://github.com/sunng87/iron-json-response"

[dependencies]
iron = "^0.6.0"
mime = "^0.2.0"
serde = "^1.0.0"
serde_json = "^1.0.0"

[dev-dependencies]
params = "^0.8.0"

[package.metadata.release]
sign-commit = true
